# FALCON

./: CMakeLists.txt  LICENSE  README.txt  clean.sh  install.sh
example/: run.sh  vgg_winograd.c
include/: falcon.h
src/: falcon.c
